Fix attempt for scrolling on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,8 @@
 body {
   touch-action:none;
-  overflow:hidden;
 }
 #canvas1 {
-  position: absolute;
+  position: fixed;
   width: 3000px;
   height: 2000px;
   top: 50%;
@@ -45,6 +44,7 @@ body {
   height:80px;
   top:50%; left:50%;
   margin-top:260px;
+  padding-bottom:100px;
   transform:translate(-50%, -50%) scale(1.2);
   transition:0.3s;
   z-index:1;
